adding env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OMDB_API_KEY=62a10d1cs
-BASE_API_URL=http://www.omdbapi.com
+NEXT_PUBLIC_OMDB_API_KEY=62a10d1c
+NEXT_PUBLIC_BASE_API_URL=http://www.omdbapi.com
