adding env. base url

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_OMDB_API_KEY=62a10d1c
 NEXT_PUBLIC_BASE_API_URL=http://www.omdbapi.com
+NEXT_PUBLIC_BASE_ENV_API_URL=http://localhost:3000/api
