--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
